--- a/index.html
+++ b/index.html
@@ -30,73 +30,73 @@
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Home<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="">About Us</a></li>
-							<li><a href="">Objectives</a></li>
-							<li><a href="">Founder</a></li>
-							<li><a href="">History</a></li>
+							<li><a href="/about.html">About Us</a></li>
+							<li><a href="/objectives.html">Objectives</a></li>
+							<li><a href="/founder.html">Founder</a></li>
+							<li><a href="/history.html">History</a></li>
 							<li role="separator" class="divider"></li>
-							<li><a href="">Message From Chairman</a></li>
-							<li><a href="">Message From Principal</a></li>
+							<li><a href="/message-from-chairman.html">Message From Chairman</a></li>
+							<li><a href="/message-from-principal.html">Message From Principal</a></li>
 						</ul>
 					</li>
 					
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Departments<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="">Computer Science &amp; Engineering</a></li>
-							<li><a href="">Information Science &amp; Engineering</a></li>
-							<li><a href="">Electronics &amp; Communication Engineering</a></li>
-							<li><a href="">Mechanical Engineering</a></li>
-							<li><a href="">Civil Engineering</a></li>
+							<li><a href="/computer-science-engineering.html">Computer Science &amp; Engineering</a></li>
+							<li><a href="/information-science-engineering.html">Information Science &amp; Engineering</a></li>
+							<li><a href="/electronics-and-communication-engineering.html">Electronics &amp; Communication Engineering</a></li>
+							<li><a href="/mechanical-engineering.html">Mechanical Engineering</a></li>
+							<li><a href="/civil-engineering.html">Civil Engineering</a></li>
 							<li role="separator" class="divider"></li>
-							<li><a href="">Basic Science</a></li>
-							<li><a href="">Library Information Centre</a></li>
+							<li><a href="/basic-science.html">Basic Science</a></li>
+							<li><a href="/library-information-centre.html">Library Information Centre</a></li>
 						</ul>
 					</li>
 
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="">B.E</a></li>
-							<li><a href="">M.Tech</a></li>
+							<li><a href="/bachelor-of-engineering.html">B.E</a></li>
+							<li><a href="/masters-of-engineering.html">M.Tech</a></li>
 						</ul>
 					</li>
 
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">News<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="">Calendar Of Events</a></li>
-							<li><a href="">Archived Events</a></li>
-							<li><a href="#">Alumini</a></li>
+							<li><a href="/calendar-of-events.html">Calendar Of Events</a></li>
+							<li><a href="/archived-events.html">Archived Events</a></li>
+							<li><a href="/alumini.html">Alumini</a></li>
 						</ul>
 					</li>
 
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Admissions<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="">Fees Structure</a></li>
-							<li><a href="">Apply Online</a></li>
+							<li><a href="/fee-structure.html">Fees Structure</a></li>
+							<li><a href="/apply-online.html">Apply Online</a></li>
 						</ul>
 					</li>
 
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Placement<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="">Details</a></li>
-							<li><a href="">Our Recruiters</a></li>
-							<li><a href="">Statistics</a></li>
+							<li><a href="/placement-details.html">Placement Details</a></li>
+							<li><a href="/our-recruiters.html">Our Recruiters</a></li>
+							<li><a href="/statistics.html">Statistics</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Clubs<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="">Department Of ECE</a></li>
-							<li><a href="">Department Of CSE</a></li>
+							<li><a href="/department-of-ece.html">Department Of ECE</a></li>
+							<li><a href="/department-of-cse.html">Department Of CSE</a></li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">Contact Us</a></li>
+					<li><a href="/contact.html">Contact Us</a></li>
 				</ul>
 			</div><!-- /.navbar-collapse -->
 		</div>
@@ -158,37 +158,18 @@
 		</div>
 	</section>
 
-	<section id="mission-and-vision">
+
+	<section id="mission-vision">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-6">
+				<div class="col-sm-6 objective">
 					<h2>Mission</h2>
 					<p>To create and nurture a learning and knowledge based environment, conducive to the pursuit of quality education which would transform a socially responsible generation to act on their professional values and beliefs.</p>
 					<p>To bring about their overall personality development, fostering a caring and creative. Environment that emphasizes physical, social and intellectual development.</p>
-					<!-- <p>To instill a sense of understanding, remarkable resilience and enduring adaptation to a diverse, competitive and dynamic society. The vision and mission statement complements the objectives of the institution which draw inspiration from the Higher Education policies of the Nation.</p> -->				
 				</div>
-				<div class="col-sm-6">
+				<div class="col-sm-6 objective">
 					<h2>Vision</h2>
 					<p>To achieve excellence in delivering quality education of global standards, coupled with innovative practices using advanced technology and expertise, transforming the student community into potential global leaders with accountability to meet the societal, national and dynamic global challenges.</p>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section id="objectives">
-		<h2 class="section-head">Objectives</h2>
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-6 objective">
-					<p>To impart science-based engineering education to develop professional skills that will prepare the students for immediate employment and provide them with a solid foundation for further education.</p>
-					<p>To create among students the curiosity, the desire and the ability to keep learning throughout life. Character building in students, so as to enable them to become responsible citizens and committed professionals.</p>
-					<p>To keep pace with changing times by providing quality education through value added courses, beyond the curriculum prescribed by the University.</p>
-				</div>
-				<div class="col-sm-6 objective">
-					<p>To develop the design capability among students so that they have the ability to participate in creative, synthetic and integrative activities of the relevant branch of engineering.</p>
-					<p>To develop an understanding among students of the human, social and business context in which they will utilize their engineering skills.</p>
-					<p>To provide state-of-the art infrastructure for students to develop their skills</p>
-					<p>Have continuous association, involvement and partnership with the corporate world</p>
 				</div>
 			</div>
 		</div>
@@ -200,7 +181,7 @@
 			<div class="row">
 				<div class="col-sm-6">
 					<h2>Why Choose Us ?</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt vero illo vel, facere rem explicabo esse totam est. Accusantium, aliquam. Ullam deleniti dolorem illum mollitia commodi, voluptatum velit beatae iusto quisquam libero inventore tempore? Quis, voluptas. In sequi perspiciatis, sint molestias, ipsa non voluptatibus corrupti. Distinctio quasi architecto ducimus qui!</p>
+					<p>Over the last few years, however, we have made strong inroads and setting an example for the nation of proactive, positive educational change. I'd like to take this opportunity to thank the very large number of faculty and management who devote their time and professional expertise towards this cause.</p>
 					<a href="" class="btn btn-blue">Read More</a>
 				</div>
 				<div class="col-sm-6">
@@ -245,14 +226,14 @@
 					<div class="course">
 						<h3>Bachelor Of Engineering</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, ea, non id odio odit distinctio expedita reiciendis tempore possimus delectus tenetur ipsam optio quidem consequatur cupiditate amet aut ipsum earum.</p>
-						<a href="">Find More</a>
+						<a href="/bachelor-of-engineering.html">Find More</a>
 					</div>
 				</div>
 				<div class="col-sm-6">
 					<div class="course">
 						<h3>Masters Of Engineering</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium nisi facere recusandae voluptatibus, perferendis saepe at tenetur quis quae voluptas, iste incidunt doloribus enim? Neque laborum saepe, nemo sit velit.</p>
-						<a href="">Find More</a>
+						<a href="/masters-of-engineering.html">Find More</a>
 					</div>
 				</div>
 			</div>
@@ -283,38 +264,6 @@
 		</div>
 	</section>
 
-	<section id="faculties">
-		<h2 class="section-head">Our Great Faculties</h2>
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-3 col-xs-6 faculty">
-					<img src="" alt="">
-					<h3>Faculty Name 1</h3>
-					<p class="deg">BE, ME, PHP</p>
-					<p class="exp">12 Years Experience</p>
-				</div>
-				<div class="col-sm-3 col-xs-6 faculty">
-					<img src="" alt="">
-					<h3>Faculty Name 2</h3>
-					<p class="deg">BE, ME, PHP</p>
-					<p class="exp">12 Years Experiance</p>
-				</div>
-				<div class="col-sm-3 col-xs-6 faculty">
-					<img src="" alt="">
-					<h3>Faculty Name 3</h3>
-					<p class="deg">BE, ME, PHP</p>
-					<p class="exp">12 Years Experiance</p>
-				</div>
-				<div class="col-sm-3 col-xs-6 faculty">
-					<img src="" alt="">
-					<h3>Faculty Name 4</h3>
-					<p class="deg">BE, ME, PHP</p>
-					<p class="exp">12 Years Experiance</p>
-				</div>
-			</div>	
-		</div>
-	</section>
-
 	<section id="trusted-partners">
 		<h2 class="section-head">Trusted Partners</h2>
 		<div class="container">
@@ -333,13 +282,13 @@
 		<h2 class="section-head">What Our Students Say</h2>
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-6 slider">
+				<div class="col-sm-offset-3 col-sm-6">
 					<div class="carousel slide" data-ride="carousel">
 						<div class="carousel-inner" role="listbox">
 							<div class="item testimonial active">
-								<p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, maiores.</p>
-								<h5>Awesome Student Name 1</h5>
-								<p class="course">Course Name 1</p>
+								<p class="content">I personally feel proud to be a student of T John institute of Technology.</p>
+								<h5>Akhila Gowda</h5>
+								<p class="course">BE - CSE</p>
 							</div>
 							<div class="item testimonial">
 								<p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor voluptas maxime officia quam nemo.</p>
@@ -354,9 +303,6 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-6 students-container">
-					<img src="assets/img/student-testimonial.jpg" alt="" class="students">
-				</div>
 			</div>
 		</div>
 	</section>
@@ -369,7 +315,7 @@
 					<article>
 						<img src="assets/img/covers/cover1.jpg" alt="" class="cover">
 						<div class="details">
-							<h3 class="title">Long long title goes here</h3>
+							<h3 class="title">Qualcom Talent Hunt</h3>
 							<p class="brief">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt odit fugit ab quisquam laudantium expedita, esse delectus maxime nobis facilis?</p>
 							<a href="" class="readmore">Read More</a>
 						</div>
@@ -379,7 +325,7 @@
 					<article>
 						<img src="assets/img/covers/cover1.jpg" alt="" class="cover">
 						<div class="details">
-							<h3 class="title">Long long title goes here</h3>
+							<h3 class="title">HackerEarth Tech Meetup</h3>
 							<p class="brief">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt odit fugit ab quisquam laudantium expedita, esse delectus maxime nobis facilis?</p>
 							<a href="" class="readmore">Read More</a>
 						</div>
@@ -389,7 +335,7 @@
 					<article>
 						<img src="assets/img/covers/cover1.jpg" alt="" class="cover">
 						<div class="details">
-							<h3 class="title">Long long title goes here</h3>
+							<h3 class="title">Linuxcon Code Summit</h3>
 							<p class="brief">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt odit fugit ab quisquam laudantium expedita, esse delectus maxime nobis facilis?</p>
 							<a href="" class="readmore">Read More</a>
 						</div>
@@ -399,93 +345,7 @@
 		</div>
 	</section>
 
-	<section id="recent-placements">
-		<div class="container">
-			<h2 class="section-head">Recent Placements</h2>
-			<div class="row">
-				<div class="col-sm-1 col-xs-3 col-sm-offset-1 placed">
-					<div>
-						<img src="assets/img/avatars/girl1.jpg" alt="">
-						<p class="name">FirstName</p>
-						<p class="course">BE-CS</p>
-						<p class="company">Samsung</p>
-					</div>
-				</div>
-				<div class="col-sm-1 col-xs-3 placed">
-					<div>
-						<img src="assets/img/avatars/girl2.jpg" alt="">
-						<p class="name">FirstName</p>
-						<p class="course">BE-CS</p>
-						<p class="company">Samsung</p>
-					</div>
-				</div>
-				<div class="col-sm-1 col-xs-3 placed">
-					<div>
-						<img src="assets/img/avatars/girl1.jpg" alt="">
-						<p class="name">FirstName</p>
-						<p class="course">BE-CS</p>
-						<p class="company">Samsung</p>
-					</div>
-				</div>
-				<div class="col-sm-1 col-xs-3 placed">
-					<div>
-						<img src="assets/img/avatars/girl2.jpg" alt="">
-						<p class="name">FirstName</p>
-						<p class="course">BE-CS</p>
-						<p class="company">Samsung</p>
-					</div>
-				</div>
-				<div class="col-sm-1 col-xs-3 placed">
-					<div>
-						<img src="assets/img/avatars/girl1.jpg" alt="">
-						<p class="name">FirstName</p>
-						<p class="course">BE-CS</p>
-						<p class="company">Samsung</p>
-					</div>
-				</div>
-				<div class="col-sm-1 col-xs-3 placed">
-					<div>
-						<img src="assets/img/avatars/girl2.jpg" alt="">
-						<p class="name">FirstName</p>
-						<p class="course">BE-CS</p>
-						<p class="company">Samsung</p>
-					</div>
-				</div>
-				<div class="col-sm-1 col-xs-3 placed">
-					<div>
-						<img src="assets/img/avatars/girl1.jpg" alt="">
-						<p class="name">FirstName</p>
-						<p class="course">BE-CS</p>
-						<p class="company">Samsung</p>
-					</div>
-				</div>
-				<div class="col-sm-1 col-xs-3 placed">
-					<div>
-						<img src="assets/img/avatars/girl2.jpg" alt="">
-						<p class="name">FirstName</p>
-						<p class="course">BE-CS</p>
-						<p class="company">Samsung</p>
-					</div>
-				</div>
-				<div class="col-sm-1 col-xs-3 placed">
-					<div>
-						<img src="assets/img/avatars/girl1.jpg" alt="">
-						<p class="name">FirstName</p>
-						<p class="course">BE-CS</p>
-						<p class="company">Samsung</p>
-					</div>
-				</div>
-				<div class="col-sm-1 col-xs-3 placed">
-					<div>
-						<img src="assets/img/avatars/girl2.jpg" alt="">
-						<p class="name">FirstName</p>
-						<p class="course">BE-CS</p>
-						<p class="company">Samsung</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+	
 
 	<section id="quick-contact">
 		<div class="container">
