--- a/index.html
+++ b/index.html
@@ -30,73 +30,73 @@
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Home<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="/about.html">About Us</a></li>
-							<li><a href="/objectives.html">Objectives</a></li>
-							<li><a href="/founder.html">Founder</a></li>
-							<li><a href="/history.html">History</a></li>
+							<li><a href="about.html">About Us</a></li>
+							<li><a href="objectives.html">Objectives</a></li>
+							<li><a href="founder.html">Founder</a></li>
+							<li><a href="history.html">History</a></li>
 							<li role="separator" class="divider"></li>
-							<li><a href="/message-from-chairman.html">Message From Chairman</a></li>
-							<li><a href="/message-from-principal.html">Message From Principal</a></li>
+							<li><a href="message-from-chairman.html">Message From Chairman</a></li>
+							<li><a href="message-from-principal.html">Message From Principal</a></li>
 						</ul>
 					</li>
 					
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Departments<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="/computer-science-engineering.html">Computer Science &amp; Engineering</a></li>
-							<li><a href="/information-science-engineering.html">Information Science &amp; Engineering</a></li>
-							<li><a href="/electronics-and-communication-engineering.html">Electronics &amp; Communication Engineering</a></li>
-							<li><a href="/mechanical-engineering.html">Mechanical Engineering</a></li>
-							<li><a href="/civil-engineering.html">Civil Engineering</a></li>
+							<li><a href="computer-science-engineering.html">Computer Science &amp; Engineering</a></li>
+							<li><a href="information-science-engineering.html">Information Science &amp; Engineering</a></li>
+							<li><a href="electronics-and-communication-engineering.html">Electronics &amp; Communication Engineering</a></li>
+							<li><a href="mechanical-engineering.html">Mechanical Engineering</a></li>
+							<li><a href="civil-engineering.html">Civil Engineering</a></li>
 							<li role="separator" class="divider"></li>
-							<li><a href="/basic-science.html">Basic Science</a></li>
-							<li><a href="/library-information-centre.html">Library Information Centre</a></li>
+							<li><a href="basic-science.html">Basic Science</a></li>
+							<li><a href="library-information-centre.html">Library Information Centre</a></li>
 						</ul>
 					</li>
 
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="/bachelor-of-engineering.html">B.E</a></li>
-							<li><a href="/masters-of-engineering.html">M.Tech</a></li>
+							<li><a href="bachelor-of-engineering.html">B.E</a></li>
+							<li><a href="masters-of-engineering.html">M.Tech</a></li>
 						</ul>
 					</li>
 
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">News<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="/calendar-of-events.html">Calendar Of Events</a></li>
-							<li><a href="/archived-events.html">Archived Events</a></li>
-							<li><a href="/alumini.html">Alumini</a></li>
+							<li><a href="calendar-of-events.html">Calendar Of Events</a></li>
+							<li><a href="archived-events.html">Archived Events</a></li>
+							<li><a href="alumini.html">Alumini</a></li>
 						</ul>
 					</li>
 
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Admissions<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="/fee-structure.html">Fees Structure</a></li>
-							<li><a href="/apply-online.html">Apply Online</a></li>
+							<li><a href="fee-structure.html">Fees Structure</a></li>
+							<li><a href="apply-online.html">Apply Online</a></li>
 						</ul>
 					</li>
 
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Placement<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="/placement-details.html">Placement Details</a></li>
-							<li><a href="/our-recruiters.html">Our Recruiters</a></li>
-							<li><a href="/statistics.html">Statistics</a></li>
+							<li><a href="placement-details.html">Placement Details</a></li>
+							<li><a href="our-recruiters.html">Our Recruiters</a></li>
+							<li><a href="statistics.html">Statistics</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Clubs<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="/department-of-ece.html">Department Of ECE</a></li>
-							<li><a href="/department-of-cse.html">Department Of CSE</a></li>
+							<li><a href="department-of-ece.html">Department Of ECE</a></li>
+							<li><a href="department-of-cse.html">Department Of CSE</a></li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="/contact.html">Contact Us</a></li>
+					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
 			</div><!-- /.navbar-collapse -->
 		</div>
@@ -226,14 +226,14 @@
 					<div class="course">
 						<h3>Bachelor Of Engineering</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, ea, non id odio odit distinctio expedita reiciendis tempore possimus delectus tenetur ipsam optio quidem consequatur cupiditate amet aut ipsum earum.</p>
-						<a href="/bachelor-of-engineering.html">Find More</a>
+						<a href="bachelor-of-engineering.html">Find More</a>
 					</div>
 				</div>
 				<div class="col-sm-6">
 					<div class="course">
 						<h3>Masters Of Engineering</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium nisi facere recusandae voluptatibus, perferendis saepe at tenetur quis quae voluptas, iste incidunt doloribus enim? Neque laborum saepe, nemo sit velit.</p>
-						<a href="/masters-of-engineering.html">Find More</a>
+						<a href="masters-of-engineering.html">Find More</a>
 					</div>
 				</div>
 			</div>
