fixes typo of faculties

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 								<div class="symbol">
 									<img src="assets/img/highlights/professor.png" alt="">
 								</div>
-								<h4>Experienced Faculty</h4>
+								<h4>Experienced Faculties</h4>
 							</div>
 						</div>
 						<div class="col-xs-4">
