--- a/cse/time-table.html
+++ b/cse/time-table.html
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="theme-color" content="#DA251C">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/bootstrap-theme.css">
-	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../assets/css/bootstrap-theme.css">
+	<link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
 	<nav class="navbar navbar-default" role="navigation">
@@ -102,6 +102,10 @@
 		</div>
 	</nav>
 
+	<header class="title">
+		<h1>CSE - Time Tables</h1>
+	</header>
+	
 	<section id="time-tables">
 		<div class="container">
 			<div class="row">
@@ -290,7 +294,7 @@
 			</div>
 		</div>
 	</footer>
-	<script src="assets/js/jquery.js"></script>
-	<script src="assets/js/bootstrap.min.js"></script>
+	<script src="../assets/js/jquery.js"></script>
+	<script src="../assets/js/bootstrap.min.js"></script>
 </body>
 </html>
