changes nav paths

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Departments<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="computer-science-engineering.html">Computer Science &amp; Engineering</a></li>
-							<li><a href="information-science-engineering.html">Information Science &amp; Engineering</a></li>
-							<li><a href="electronics-and-communication-engineering.html">Electronics &amp; Communication Engineering</a></li>
-							<li><a href="mechanical-engineering.html">Mechanical Engineering</a></li>
-							<li><a href="civil-engineering.html">Civil Engineering</a></li>
+							<li><a href="computer-science-and-engineering-department.html">Computer Science &amp; Engineering</a></li>
+							<li><a href="information-science-and-engineering-department.html">Information Science &amp; Engineering</a></li>
+							<li><a href="electronics-and-communication-engineering-department.html">Electronics &amp; Communication Engineering</a></li>
+							<li><a href="mechanical-engineering-department.html">Mechanical Engineering</a></li>
+							<li><a href="civil-engineering-department.html">Civil Engineering</a></li>
 							<li role="separator" class="divider"></li>
-							<li><a href="basic-science.html">Basic Science</a></li>
+							<li><a href="basic-science-department.html">Basic Science</a></li>
 							<li><a href="library-information-centre.html">Library Information Centre</a></li>
 						</ul>
 					</li>
