adds form and changes layout

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 	</header>
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-6">
+			<div class="col-sm-4">
 				<h3>Campus Address</h3>
 				#86/1, <br>
 				Gottigere, Bannerghatta Road Bangalore, <br>
@@ -25,7 +25,7 @@
 				Fax : 080 49030509 <br>
 				Website: www.tjohnit.com
 			</div>
-			<div class="col-sm-6">
+			<div class="col-sm-4">
 				<h3>Corporate Address</h3>
 				SG−4, <br>
 				Manipal Centre, <br>
@@ -35,25 +35,22 @@
 				Phone: +91 80 25597817, 25092057 <br>
 				Fax : +91 80 25590952
 			</div>
+			<div class="col-sm-4">
+				<label for="">Name</label>
+				<input type="text" class="form-control" placeholder="">
+				<label for="">Email</label>
+				<input type="text" class="form-control" placeholder="">
+				<label for="">Message</label>
+				<textarea name="" rows="6" class="form-control"></textarea>
+				<br>
+				<input type="submit" class="btn btn-primary">
+			</div>
 		</div>
 		
 		<div class="row">
 			<div class="col-sm-12">
 				Map goes here
 			</div>
-		</div>
-
-		<div class="row">
-			<form action="">
-				<div class="row">
-					<div class="col-sm-offset-3 col-sm-6">
-						<input type="text" class="form-element" placeholder="">
-						<input type="text" class="form-element" placeholder="">
-						<textarea name="" rows="6" class="form-element"></textarea>
-						<input type="submit" class="form-element">
-					</div>
-				</div>
-			</form>	
 		</div>
 	</div>
 
