adds 2 more students

--- a/placement-details.html
+++ b/placement-details.html
@@ -97,6 +97,22 @@
 						<p class="company">Samsung</p>
 					</div>
 				</div>
+				<div class="col-sm-2 col-xs-6 student">
+					<div>
+						<img src="assets/img/avatars/girl.png" alt="">
+						<p class="name">FirstName</p>
+						<p class="course">BE-CS</p>
+						<p class="company">Samsung</p>
+					</div>
+				</div>
+				<div class="col-sm-2 col-xs-6 student">
+					<div>
+						<img src="assets/img/avatars/boy.png" alt="">
+						<p class="name">FirstName</p>
+						<p class="course">BE-CS</p>
+						<p class="company">Samsung</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
