--- a/calendar-of-events.html
+++ b/calendar-of-events.html
@@ -2,14 +2,19 @@
 <html>
 <head>
 	<title>Calendar Of Events</title>
+	<meta charset="UTF-8">
+	<meta name="theme-color" content="#DA251C">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/bootstrap-theme.css">
+	<link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 <body>
-
+	<header class="title">
+		<h1>Calendar Of Events</h1>	
+	</header>
 	<div class="container">
-		<h1>Calendar Of Events</h1>
 		<table class="table table-hover card">
 			<tr>
 				<th>Month</th>
