--- a/about.html
+++ b/about.html
@@ -14,12 +14,16 @@
 		<h1>About</h1>	
 	</header>
 	<div class="container">
-		<p>The year was 1993 when T. John College with its premises in Campbell Road, Austin Town, Bangalore began functioning. The college started by Dr. Thomas P. John offered a 3 year BHM Degree course to 24 students. Since a humble beginning in 1993, there has been no looking back. And every year the college crosses new milestones. The college premises have expanded to include new departments and blocks.</p>
-		
-		<p>The college is governed by a governing Board, the Chairman being <strong>Dr. Thomas P. John</strong> the son of the founder <strong>Mr. T. John</strong>. The other members of this governing Board are high-profile industrialists, financiers, entrepreneurs and renowned academicians.</p>
-		</div>
+		<div class="row">
+			<div class="col-sm-6">
+				<p>The year was 1993 when T. John College with its premises in Campbell Road, Austin Town, Bangalore began functioning. The college started by Dr. Thomas P. John offered a 3 year BHM Degree course to 24 students. Since a humble beginning in 1993, there has been no looking back. And every year the college crosses new milestones. The college premises have expanded to include new departments and blocks.</p>
 
-		<script src="assets/js/jquery.js"></script>
-		<script src="assets/js/bootstrap.min.js"></script>
-	</body>
-	</html>
+				<p>The college is governed by a governing Board, the Chairman being <strong>Dr. Thomas P. John</strong> the son of the founder <strong>Mr. T. John</strong>. The other members of this governing Board are high-profile industrialists, financiers, entrepreneurs and renowned academicians.</p>		
+			</div>
+		</div>
+	</div>
+
+	<script src="assets/js/jquery.js"></script>
+	<script src="assets/js/bootstrap.min.js"></script>
+</body>
+</html>
