--- a/computer-science-and-engineering-department.html
+++ b/computer-science-and-engineering-department.html
@@ -63,7 +63,7 @@
 				<ul class="nav nav-pills nav-stacked sidebar">
 					<li><a href="#">Events</a></li>
 					<li><a href="#">Faculties</a></li>
-					<li><a href="cse/time-table.html">Time Table</a></li>
+					<li><a href="cs/time-table.html">Time Table</a></li>
 					<li><a href="#">Clubs</a></li>
 					<li><a href="#">Gallery</a></li>
 				</ul>
