--- a/computer-science-and-engineering-department.html
+++ b/computer-science-and-engineering-department.html
@@ -61,11 +61,11 @@
 			</div>
 			<div class="col-sm-3">
 				<ul class="nav nav-pills nav-stacked sidebar">
-					<li><a href="#">Events</a></li>
-					<li><a href="#">Faculties</a></li>
+					<li><a href="cs/events.html">Events</a></li>
+					<li><a href="cs/faculties.html">Faculties</a></li>
 					<li><a href="cs/time-table.html">Time Table</a></li>
-					<li><a href="#">Clubs</a></li>
-					<li><a href="#">Gallery</a></li>
+					<li><a href="cs/clubs.html">Clubs</a></li>
+					<li><a href="cs/gallery.html">Gallery</a></li>
 				</ul>
 			</div>
 		</div>
