adds header images

--- a/bachelor-of-engineering.html
+++ b/bachelor-of-engineering.html
@@ -10,24 +10,24 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-	<header class="title">
-		<h1>Bachelor of Engineering</h1>	
+	<header class="title img" style="background-image: url('assets/img/headers/be.jpg');">
+		<h1><span>Bachelor of Engineering</span></h1>	
 	</header>
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-6">
-						
+
 			</div>
 			<div class="col-sm-6">
 				
 			</div>
 		</div>
 		<div class="row">
-			<a href="" class="btn btn-primary">Computer Science Engineering</a>
-			<a href="" class="btn btn-primary">Electronins and Communications Engineering</a>
-			<a href="" class="btn btn-primary">Civil Engineering</a>
-			<a href="" class="btn btn-primary">Mechnical Engineering</a>
-			<a href="" class="btn btn-primary">Information Science Engineering</a>
+			<a href="computer-science-and-engineering-department.html" class="btn btn-primary">Computer Science &amp; Engineering</a>
+			<a href="information-science-and-engineering-department.html" class="btn btn-primary">Information Science &amp; Engineering</a>
+			<a href="electronics-and-communication-engineering-department.html" class="btn btn-primary">Electronics &amp; Communication Engineering</a>
+			<a href="mechanical-engineering-department.html" class="btn btn-primary">Mechanical Engineering</a>
+			<a href="civil-engineering-department.html" class="btn btn-primary">Civil Engineering</a>
 		</div>
 	</div>
 
