--- a/civil-engineering-department.html
+++ b/civil-engineering-department.html
@@ -10,8 +10,8 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-	<header class="title">
-		<h1>Civil Engineering Department</h1>	
+	<header class="title img" style="background-image: url('assets/img/headers/cv.jpg');">
+		<h1><span>Civil Engineering Department</span></h1>	
 	</header>
 	<div class="container">
 		<div class="row">
