--- a/computer-science-and-engineering-department.html
+++ b/computer-science-and-engineering-department.html
@@ -10,8 +10,8 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-	<header class="title">
-		<h1>Computer Science &amp Engineering Department</h1>	
+	<header class="title img blurred" style="background-image: url('assets/img/headers/cs.jpg');">
+		<h1><span>Computer Science &amp Engineering Department</span></h1>	
 	</header>
 	<div class="container">
 		<div class="row">
