changes urls and text data

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Courses<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="bachelor-of-engineering.html">B.E</a></li>
-							<li><a href="masters-of-engineering.html">M.Tech</a></li>
+							<li><a href="master-of-technology.html">M.Tech</a></li>
 						</ul>
 					</li>
 
@@ -231,9 +231,9 @@
 				</div>
 				<div class="col-sm-6">
 					<div class="course">
-						<h3>Masters Of Engineering</h3>
+						<h3> Master of Technology</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium nisi facere recusandae voluptatibus, perferendis saepe at tenetur quis quae voluptas, iste incidunt doloribus enim? Neque laborum saepe, nemo sit velit.</p>
-						<a href="masters-of-engineering.html">Find More</a>
+						<a href="master-of-technology.html">Find More</a>
 					</div>
 				</div>
 			</div>
