--- a/message-from-chairman.html
+++ b/message-from-chairman.html
@@ -14,23 +14,31 @@
 		<h1>Message from Chairman</h1>	
 	</header>
 	<div class="container">
-		<p>	
-			<strong>T John Group of Institutions</strong> consisting of dynamic & internationally recognized colleges with a long established tradition in providing excellence in education, has dramatically expanded the under graduate &amb post graduate programmes to offer degrees of demand such as <strong>Science</strong>, <strong>Management</strong>, <strong>Technology</strong>, <strong>Hospitality</strong>, <strong>Computers</strong>, etc.,
-		</p>
-		<p>
-			We are diverse, our learning community benefits from a wide range in age and background. classroom experiences are challenging and thought provoking as a result of the cultural uniqueness and life experience of the students. Many are making the commitment to take on the challenge of a graduate or undergraduate programme to succeed in life.
-		</p>
-		<p>
-			Over the last few years, however, web have made strong inroads and setting an example for the nation of proactive, positive educational change. I'd like to take this opportunity to thank the very large number of faculty and management who devote their time and professional expertise towards this cause.
-		</p>
-		<p>
-			The responsiveness of our staff, the quality of our facilities and the practical approach we apply to our programmes ensures our faculty meets the needs of today's students and tomorrow's employees.
-		</p>
-		<p>
-			Regards <br>
-			<strong>Dr. Thomas P. John</strong>,<br>
-			<i>Chairman</i>
-		</p>
+		<div class="row">
+			<div class="col-sm-3">
+				<img src="assets/img/chairman.jpg" alt="" class="img img-responsive">
+			</div>
+			<div class="col-sm-9">
+				<p>	
+					<strong>T John Group of Institutions</strong> consisting of dynamic & internationally recognized colleges with a long established tradition in providing excellence in education, has dramatically expanded the under graduate &amb post graduate programmes to offer degrees of demand such as <strong>Science</strong>, <strong>Management</strong>, <strong>Technology</strong>, <strong>Hospitality</strong>, <strong>Computers</strong>, etc.,
+				</p>
+				<p>
+					We are diverse, our learning community benefits from a wide range in age and background. classroom experiences are challenging and thought provoking as a result of the cultural uniqueness and life experience of the students. Many are making the commitment to take on the challenge of a graduate or undergraduate programme to succeed in life.
+				</p>
+				<p>
+					Over the last few years, however, web have made strong inroads and setting an example for the nation of proactive, positive educational change. I'd like to take this opportunity to thank the very large number of faculty and management who devote their time and professional expertise towards this cause.
+				</p>
+				<p>
+					The responsiveness of our staff, the quality of our facilities and the practical approach we apply to our programmes ensures our faculty meets the needs of today's students and tomorrow's employees.
+				</p>
+				<p>
+					Regards <br>
+					<strong>Dr. Thomas P. John</strong>,<br>
+					<i>Chairman</i>
+				</p>
+				
+			</div>
+		</div>		
 	</div>
 
 	<script src="assets/js/jquery.js"></script>
